# nexus-prime-web

./: .gitignore  Dockerfile  README.md  SIDEPROJECTORS_LISTING.md  docker-compose.yml  vercel.json
.github/workflows/: deploy.yml
.vercel/: project.json
backend/: Cargo.toml
backend/src/: Cargo.toml  chat.rs  db.rs  inference.rs  main.rs  metrics.rs  odds.rs  steam.rs  tests.rs  types.rs  ws.rs
docker/: Dockerfile.backend
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/api/auth/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/api/picks/: route.ts
frontend/app/chat/: page.tsx
frontend/app/contact/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/faq/: page.tsx
frontend/app/historique/: page.tsx
frontend/app/login/: page.tsx
frontend/app/methodologie/: page.tsx
frontend/app/pricing/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: Footer.tsx  Header.tsx  Hero.tsx  LiveSignals.tsx  PicksSection.tsx
frontend/public/: sw.js
ml/: regenerate_models.py
ml/models/: bundesliga.onnx  laliga.onnx  ligue1.onnx  premier_league.onnx  serie_a.onnx
