[package]
name = "nexus-prime-pronos"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
prometheus = "0.13"
metrics = "0.24"
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["trace"] }
tokio-tungstenite = "0.25"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "2.0"
once_cell = "1.20"
reqwest = { version = "0.12", features = ["json"] }
getrandom = "=0.2.15"
